tools/tree-sitter-nova/grammar.js
    source_file: $ => repeat($._top_level),

    // Top-level prefers declaration constructs; we lift `prec` on the
    // declaration variants so the parser disambiguates `let` at module
    // scope from `let` inside a block.
    _top_level: $ => choice(
      prec(1, $.fn_decl),
      prec(1, $.extern_fn_decl),
      prec(1, $.import_decl),
      prec(1, $.struct_decl),
      prec(1, $.enum_decl),
      prec(1, $.const_decl),
      prec(1, $.cognitive_decl),    // mind / soul / system
      $._statement,        // includes let, if, while, for, asm, expr
    ),

    // Cognitive-DSL `mind`/`soul`/`system` declarations. R10-era
    // experimental syntax used by examples/*_demo.nova files.
    // We keep the grammar permissive — these are user-defined
    // declarative records with named sections; the compiler lowers
    // them into a series of runtime calls via a macro pass.
    cognitive_decl: $ => seq(
      field('kind', choice('mind', 'soul', 'system')),
      field('name', $.identifier),
      '{',
      repeat($.cognitive_section),
      '}',
    ),

    cognitive_section: $ => choice(
      // `nodes { Vision: perceiver, Audio: perceiver }`,
      // `channels { perception: Sense ~> Think }`,
      // `bridges { see_to_think: sensory.Vision ~> reasoning.Analyzer }`,
      // `identity { purpose: "..." }`,
      // `values { truth: "..." }`,
      // `drives { curiosity: 90 }`,
      // `feelings { focus: 80 }`,
      // `minds { sensory: Sensory }`,
      seq(
        field('name', $.identifier),
        '{',
        repeat($.cognitive_entry),
        '}',
      ),
      // `soul: Nova` — single-field section (used inside `system`).
      seq(
        field('name', $.identifier),
        ':',
        field('value', $._expression),
        optional(','),
      ),
    ),

    // Each line inside a cognitive section is one of:
    //   * `name: expr` (a tagged value),
    //   * `name { ... }` (a nested phase / sub-section with its own
    //     `name: expr` entries; used by `phases { awakening { ... } }`
    //     in examples/soul_demo.nova).
    cognitive_entry: $ => choice(
      seq(
        field('name', $.identifier),
        ':',
        field('value', $._expression),
        // Allow a trailing comma-separated continuation for entries
        // like `boosts: curiosity by 20, alertness by 30`.
        optional(seq(
          repeat(seq(',', $._expression)),
        )),
      ),
      seq(
        field('name', $.identifier),
        '{',
        repeat($.cognitive_entry),
        '}',
      ),
    ),

    // -----------------------------------------------------------------
    // enum (R17A: variants may carry payloads; R21A: type parameters)
    // -----------------------------------------------------------------

    type_parameters: $ => seq(
      '<',
      commaSep1($.type_parameter),
      '>',
    ),

    type_parameter: $ => field('name', $.identifier),

    // -----------------------------------------------------------------
    // Declarations
    // -----------------------------------------------------------------

    const_decl: $ => seq(
      'const',
      field('name', $.identifier),
      optional(seq(':', field('type', $.type_expression))),
      '=',
      field('value', $._expression),
      optional(';'),
    ),

    fn_decl: $ => seq(
      'fn',
      // Method-style decl `fn Type.method(self, ...)` — captured by
      // letting the name be a single identifier OR a `Type.method`
      // chain. The compiler folds this into a `Type.method` builtin.
      field('name', choice($.identifier, $.qualified_fn_name)),
      // R22B: optional `<T, U>` type-parameter list.
      optional(field('type_parameters', $.type_parameters)),
      '(',
      field('parameters', optional($.parameter_list)),
      ')',
      // Optional `-> Type` return-type annotation (R9E). NOVA also
      // accepts the legacy `: Type` spelling for forward compatibility
      // with older sources (cf. R22B test_generic_fn `legacy_add`).
      optional(seq(choice('->', ':'), field('return_type', $.type_expression))),
      field('body', $.block),
    ),

    // `fn Type.method(self, ...)` method-binding head — R12-era feature
    // still used widely in tests/examples (test_struct_methods.nova).
    qualified_fn_name: $ => seq(
      field('type', $.identifier),
      '.',
      field('method', $.identifier),
    ),

    parameter_list: $ => commaSepTrail($.parameter),

    parameter: $ => seq(
      field('name', $.identifier),
      // Optional `: Type` annotation, currently unused by the compiler
      // but allowed by the LSP-facing syntax.
      optional(seq(':', field('type', $.type_expression))),
      // Optional default-value: `fn greet(name, times = 1)`.
      optional(seq('=', field('default', $._expression))),
    ),

    // -----------------------------------------------------------------
    // Type expressions — bare ident, generic `T<U, V>`, qualified
    // `Type::Variant`, or function type `T -> U`. R22B extends this
    // with `T -> U` so `f: T -> U` parses inside a parameter list.
    // -----------------------------------------------------------------
    type_expression: $ => choice(
      $.function_type,
      $._simple_type,
    ),

    _simple_type: $ => choice(
      // Plain `T`, `int`, `MyType`...
      $.identifier,
      // Generic: `Result<int, str>`, `Box<T>`, `Result<Result<int, str>, str>`.
      $.generic_type,
      // Path: `Result::Ok`, `Option::None`.
      $.path_qualified_type,
    ),

    generic_type: $ => prec(1, seq(
      field('base', $.identifier),
      '<',
      commaSep1($.type_expression),
      '>',
    )),

    function_type: $ => prec.right(PREC.fn_type, seq(
      field('param', $._simple_type),
      '->',
      field('result', $.type_expression),
    )),

    struct_decl: $ => seq(
      'struct',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      '{',
      optional($.struct_field_list),
      '}',
    ),

    struct_field_list: $ => seq(
      $.struct_field,
      // R23A also accepts `;` or nothing (newline) as a field separator
      // alongside `,`. test_struct_methods.nova has each field on its
      // own line with no punctuation.
      repeat(seq(optional(choice(',', ';')), $.struct_field)),
      optional(choice(',', ';')),
    ),

    struct_field: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $.type_expression))),
    ),

    // R14-era multi-binding let: `let a, b = expr, expr`. Also
    // covers single-binding let, optionally with a type annotation,
    // and the R13 destructure form `let [a, b, ...rest] = expr`.
    // Single-binding `let x = expr` keeps the legacy CST shape:
    //   (let_decl name: (identifier) value: (...))
    // Multi-binding adds extra `(identifier)` siblings under the
    // `name` field. Destructure swaps `name` for `pattern`.
    let_decl: $ => seq(
      'let',
      choice(
        seq(
          field('name', $.identifier),
          optional(seq(':', field('type', $.type_expression))),
          repeat(seq(',', field('name', $.identifier))),
          '=',
          field('value', choice($._expression, $._expression_list)),
        ),
        seq(
          field('pattern', $.list_pattern),
          '=',
          field('value', $._expression),
        ),
        // R25A: `let Point { x: px, y: py } = p` — struct destructure
        // pattern at let head. Dynamic precedence picks this over the
        // single-name reading when the identifier is followed by a
        // `{` and field-init-like contents.
        prec.dynamic(20, seq(
          field('pattern', $.struct_pattern),
          '=',
          field('value', $._expression),
        )),
        // R32D: `let Pair(a, b) = pair`, `let Some(Some(v)) = nested`,
        // `let Ok(Point { x, y }) = res`. The variant-pattern branch
        // sits at the same dynamic-precedence (20) as struct_pattern
        // so the parser commits to it over the fall-through call-
        // expression reading. Path-qualified variants
        // (`Result::Ok(v)`) and bare-identifier variants (`Some(v)`)
        // share this branch via `variant_pattern`'s own grammar.
        prec.dynamic(20, seq(
          field('pattern', $.variant_pattern),
          '=',
          field('value', $._expression),
        )),
      ),
      optional(';'),
    ),

    list_pattern: $ => seq(
      '[',
      optional(commaSep1(choice(
        $.identifier,
        $.wildcard_pattern,
        $.rest_pattern,
      ))),
      ']',
    ),

    rest_pattern: $ => seq(
      '...',
      optional(field('name', $.identifier)),
    ),

    // R25A: struct destructure pattern `Point { x: px, y: py }` or
    // shorthand `Point { x, y }`. Used at let head, match arm head, or
    // nested inside other patterns. A trailing `..` denotes "rest of
    // fields ignored" (partial destructure). The leading type is a bare
    // identifier — generic forms are out of scope for the same reason
    // as struct_init_expression (lexer can't disambiguate `<` cheaply).
    _expression_list: $ => prec.right(seq(
      $._expression,
      repeat1(seq(',', $._expression)),
    )),

    // -----------------------------------------------------------------
    // asm { "..." "..." }
    // -----------------------------------------------------------------

    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.let_decl,                  // `let` may appear inside a block
      $.const_decl,
      $.if_statement,
      $.if_let_statement,          // R33C: `if let PAT = expr { ... }`
      $.while_statement,
      $.do_while_statement,
      $.for_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.asm_block,
      $.impl_block,
      $.labeled_statement,         // `@label while ...`
      $.assignment_statement,
      $.expression_statement,
      $.block,                     // bare block is a valid statement
    ),

    while_statement: $ => seq(
      'while',
      field('condition', $._expression),
      field('body', $.block),
      // R15-era `else` clause on while that runs when the loop exits
      // normally (no `break`). Present in test_while_else.nova.
      optional(seq('else', field('else_branch', $.block))),
    ),

    // `do { ... } while cond` — at-least-once loop
    // (test_ternary_dowhile.nova).
    do_while_statement: $ => seq(
      'do',
      field('body', $.block),
      'while',
      field('condition', $._expression),
      optional(';'),
    ),

    // `impl Type { fn method(self) { ... } ... }` — R12-era method
    // bundle. Lowers to a series of `Type.method` definitions.
    impl_block: $ => seq(
      'impl',
      field('type', $.identifier),
      '{',
      repeat($.fn_decl),
      '}',
    ),

    // `@label while ...`, `@label for ...` — labeled loops. The
    // matching `break @label` / `continue @label` uses the same
    // label syntax (already handled in break/continue statements
    // via the optional `@<ident>` token below).
    labeled_statement: $ => seq(
      field('label', $.label),
      field('statement', choice($.while_statement, $.for_statement, $.do_while_statement)),
    ),

    label: $ => seq('@', field('name', $.identifier)),

    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $._expression)),
      optional(';'),
    )),

    // `break` / `continue` may take:
    //   * an optional `@label` target (`break @outer`),
    //   * an optional `if cond` guard (`break if i > 5`,
    //     `break @outer if inner > 2`).
    // Combined form `break @label if cond` is used in
    // test_break_continue_if.nova.
    break_statement: $ => prec.right(seq(
      'break',
      optional(field('target', $.label)),
      optional(seq('if', field('condition', $._expression))),
      optional(';'),
    )),
    assignment_statement: $ => prec.right(seq(
      field('lhs', choice($._expression, $._expression_list)),
      field('operator', choice(
        // Basic assignment + arithmetic combos.
        '=', '+=', '-=', '*=', '/=', '%=',
        // Bitwise compounds — token wrappers needed because the lexer
        // would otherwise prefer the binary `<<` / `>>` / etc. for the
        // first two chars.
        token(prec(2, '**=')),
        token(prec(2, '&=')),
        token(prec(2, '|=')),
        token(prec(2, '^=')),
        token(prec(2, '<<=')),
        token(prec(2, '>>=')),
        // Logical/nullish compound — same lexer trick.
        token(prec(2, '??=')),
        token(prec(2, '||=')),
        token(prec(2, '&&=')),
      )),
      field('rhs', choice($._expression, $._expression_list)),
      optional(';'),
    )),

    expression_statement: $ => seq(
      $._expression,
      optional(';'),
    ),

    // -----------------------------------------------------------------
    // Expressions
    // -----------------------------------------------------------------

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.ternary_expression,
      // R20A: postfix `?` Result-propagation.
      $.try_propagate_expression,
      // `expr @ score` confidence annotation.
      $.confidence_expression,
      // `...iter` spread, used in calls and list literals.
      $.spread_expression,
      // R15-era `if cond { a } else { b }` as expression.
      $.if_expression,
      // R33C: `if let PAT = expr { ... } else { ... }` as expression.
      $.if_let_expression,
      $.match_expression,
      $.lambda_expression,
      $.call_expression,
      // R25A: `Point { x: 1, y: 2 }` brace-init. Sits at call-level
      // precedence so `Point { x: 1 }.x` field-access chains work.
      $.struct_init_expression,
      $.index_expression,
      $.slice_expression,
      $.field_expression,
      $.parenthesized_expression,
      $.path_expression,        // R17A: `Type::Variant` constructor base
      $.list_literal,
      $.map_literal,
      $.map_comprehension,
      $.list_comprehension,
      $.number,
      $.float,
      $.string_literal,
      $.boolean,
      $.none_literal,
      $.identifier,
    ),

    // Anonymous function: `fn(x, y) { ... }`
    if_expression: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      field('consequence', $.block),
      'else',
      field('alternative', choice($.block, $.if_expression)),
    )),

    // R33C: `if let PAT = expr { ... } else { ... }` in expression
    // position. The `else` branch is REQUIRED for the expression form
    // (so the result is total) — the if-let-statement form above allows
    // omitting the else. The else alternative may chain another
    // if-let-expression or a plain if-expression (`else if cond` /
    // `else if let pat = ...`). prec.right resolves the dangling-else
    // chain to the closest preceding `if`.
    unary_expression: $ => prec(PREC.unary, seq(
      field('operator', choice('!', '-', '~', '+', 'not')),
      field('operand', $._expression),
    )),

    // Spread `...expr` — used as a call argument or list-literal item.
    call_expression: $ => prec(PREC.call, seq(
      field('function', choice(
        $.identifier,
        $.field_expression,
        $.path_expression,        // R17A: `Option::Some(42)`
      )),
      '(',
      field('arguments', optional($.argument_list)),
      ')',
    )),

    // R5-era named-argument call form: `greet(name: "Alice", greeting: "Hello")`.
    // Names are documentation-only — the compiler binds positionally.
    // Trailing comma allowed (test_trailing_comma.nova).
    argument_list: $ => seq(
      choice($.named_argument, $._expression),
      repeat(seq(',', choice($.named_argument, $._expression))),
      optional(','),
    ),

    float: $ => token(/[0-9][0-9_]*\.[0-9][0-9_]*/),

    boolean: $ => choice('true', 'false'),
