tools/tree-sitter-nova/test/corpus/r22_generic_fns.txt
================================================================================
R22B: generic fn with single type parameter
================================================================================

fn identity<T>(x: T) -> T {
    return x
}

--------------------------------------------------------------------------------

(source_file
  (fn_decl
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (identifier)))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_expression
          (identifier))))
    return_type: (type_expression
      (identifier))
    body: (block
      (return_statement
        value: (identifier)))))

================================================================================
R22B: generic fn with two type parameters
================================================================================

fn map<T, U>(xs, f) {
    return f
}

--------------------------------------------------------------------------------

(source_file
  (fn_decl
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (identifier))
      (type_parameter
        name: (identifier)))
    parameters: (parameter_list
      (parameter
        name: (identifier))
      (parameter
        name: (identifier)))
    body: (block
      (return_statement
        value: (identifier)))))

================================================================================
R22B: function-type parameter `f: T -> U`
================================================================================

fn apply<T, U>(x: T, f: T -> U) -> U {
    return f(x)
}

--------------------------------------------------------------------------------

(source_file
  (fn_decl
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (identifier))
      (type_parameter
        name: (identifier)))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_expression
          (identifier)))
      (parameter
        name: (identifier)
        type: (type_expression
          (function_type
            param: (identifier)
            result: (type_expression
              (identifier))))))
    return_type: (type_expression
      (identifier))
    body: (block
      (return_statement
        value: (call_expression
          function: (identifier)
          arguments: (argument_list
            (identifier)))))))

================================================================================
R22B: legacy `: T` return-type spelling still parses
================================================================================

fn legacy_add(a: int, b: int): int {
    return a + b
}

--------------------------------------------------------------------------------

(source_file
  (fn_decl
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_expression
          (identifier)))
      (parameter
        name: (identifier)
        type: (type_expression
          (identifier))))
    return_type: (type_expression
      (identifier))
    body: (block
      (return_statement
        value: (binary_expression
          left: (identifier)
          right: (identifier))))))

================================================================================
R22B: generic fn taking generic Result parameter
================================================================================

fn unwrap<T, E>(r: Result<T, E>) -> T {
    return r
}

--------------------------------------------------------------------------------

(source_file
  (fn_decl
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (identifier))
      (type_parameter
        name: (identifier)))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_expression
          (generic_type
            base: (identifier)
            (type_expression
              (identifier))
            (type_expression
              (identifier))))))
    return_type: (type_expression
      (identifier))
    body: (block
      (return_statement
        value: (identifier)))))
