tools/tree-sitter-nova/test/corpus/r25_brace_init.txt
================================================================================
R25A: single-field brace-init struct construction
================================================================================

let b = Box { value: 42 }

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (struct_init_expression
      type: (identifier)
      (field_init_list
        (field_init
          name: (identifier)
          value: (number))))))

================================================================================
R25A: multi-field brace-init with int values
================================================================================

let p = Point { x: 10, y: 20 }

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (struct_init_expression
      type: (identifier)
      (field_init_list
        (field_init
          name: (identifier)
          value: (number))
        (field_init
          name: (identifier)
          value: (number))))))

================================================================================
R25A: brace-init field-order swap (semantically equivalent to declaration order)
================================================================================

let p_swap = Point { y: 20, x: 10 }

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (struct_init_expression
      type: (identifier)
      (field_init_list
        (field_init
          name: (identifier)
          value: (number))
        (field_init
          name: (identifier)
          value: (number))))))

================================================================================
R25A: brace-init with string value
================================================================================

let b_str = Box { value: "hello" }

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (struct_init_expression
      type: (identifier)
      (field_init_list
        (field_init
          name: (identifier)
          value: (string_literal))))))

================================================================================
R25A: brace-init nested inside a list literal
================================================================================

let pts = [Point { x: 1, y: 2 }, Point { x: 3, y: 4 }]

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (list_literal
      (struct_init_expression
        type: (identifier)
        (field_init_list
          (field_init
            name: (identifier)
            value: (number))
          (field_init
            name: (identifier)
            value: (number))))
      (struct_init_expression
        type: (identifier)
        (field_init_list
          (field_init
            name: (identifier)
            value: (number))
          (field_init
            name: (identifier)
            value: (number)))))))

================================================================================
R25A: brace-init nested inside another brace-init
================================================================================

let wp = Wrap { inner: Point { x: 7, y: 8 } }

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (struct_init_expression
      type: (identifier)
      (field_init_list
        (field_init
          name: (identifier)
          value: (struct_init_expression
            type: (identifier)
            (field_init_list
              (field_init
                name: (identifier)
                value: (number))
              (field_init
                name: (identifier)
                value: (number)))))))))

================================================================================
R25A: brace-init result returned from a method body
================================================================================

fn Vec2.add(self, other) {
    return Vec2 { x: self.x + other.x, y: self.y + other.y }
}

--------------------------------------------------------------------------------

(source_file
  (fn_decl
    name: (qualified_fn_name
      type: (identifier)
      method: (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier))
      (parameter
        name: (identifier)))
    body: (block
      (return_statement
        value: (struct_init_expression
          type: (identifier)
          (field_init_list
            (field_init
              name: (identifier)
              value: (binary_expression
                left: (field_expression
                  object: (identifier)
                  field: (identifier))
                right: (field_expression
                  object: (identifier)
                  field: (identifier))))
            (field_init
              name: (identifier)
              value: (binary_expression
                left: (field_expression
                  object: (identifier)
                  field: (identifier))
                right: (field_expression
                  object: (identifier)
                  field: (identifier))))))))))

================================================================================
R25A: brace-init field access chain — `Point { x: 1, y: 2 }.x`
================================================================================

let x = Point { x: 1, y: 2 }.x

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (field_expression
      object: (struct_init_expression
        type: (identifier)
        (field_init_list
          (field_init
            name: (identifier)
            value: (number))
          (field_init
            name: (identifier)
            value: (number))))
      field: (identifier))))

================================================================================
R25A: empty brace-init `Foo {}` (zero fields)
================================================================================

let empty = Empty {}

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (struct_init_expression
      type: (identifier))))

================================================================================
R25A: three-field brace-init with trailing comma
================================================================================

let t = Triple { a: 1, b: 2, c: 3, }

--------------------------------------------------------------------------------

(source_file
  (let_decl
    name: (identifier)
    value: (struct_init_expression
      type: (identifier)
      (field_init_list
        (field_init
          name: (identifier)
          value: (number))
        (field_init
          name: (identifier)
          value: (number))
        (field_init
          name: (identifier)
          value: (number))))))
